--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,8 +11,12 @@ author_profile: true
 
 
 Journal papers:
-1.
-2.
+
+1. Fang, Pan, et al. "Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension." Engineering Structures 317 (2024): 118632.
+
+2. Fang, Pan, et al. "Bending study of submarine power cables based on a repeated unit cell model." Engineering Structures 293 (2023): 116606.
+
+3. Fang, Pan, et al. "Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure." Thin-Walled Structures 181 (2022): 110107.
 
 
 
