--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,12 +13,17 @@ author_profile: true
 Journal papers:
 <br>
 
-1. Fang, Pan, et al. "Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension." Engineering Structures 317 (2024): 118632.
+1. <b>Fang, Pan<b>, et al. "Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension." Engineering Structures 317 (2024): 118632.
 <br>
-2. Fang, Pan, et al. "Bending study of submarine power cables based on a repeated unit cell model." Engineering Structures 293 (2023): 116606.
+2. <b>Fang, Pan<b>, et al. "Bending study of submarine power cables based on a repeated unit cell model." Engineering Structures 293 (2023): 116606.
 <br>
-3. Fang, Pan, et al. "Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure." Thin-Walled Structures 181 (2022): 110107.
-
+3. <b>Fang, Pan<b>, et al. "Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure." Thin-Walled Structures 181 (2022): 110107.
+<br>
+4. <b>Fang, Pan<b>, et al. "Mechanical responses of submarine power cables subject to axisymmetric loadings." Ocean Engineering 239 (2021): 109847.
+<br>
+5. <b>Fang, P.<b>, Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27.
+<br>
+6. 
 
 
 
