--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -21,7 +21,7 @@ Journal papers:
 <br>
 4. <b>Fang, Pan<b>, et al. "Mechanical responses of submarine power cables subject to axisymmetric loadings." Ocean Engineering 239 (2021): 109847.
 <br>
-5. <b>Fang, P.<b>, Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27.
+5. <b>Fang, P.<b>, Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27. <a href="https://www.sciencedirect.com/science/article/pii/S0141118718307053">Link</a>
 <br>
 6. 
 
