--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,7 +13,7 @@ author_profile: true
 Journal papers:
 <br>
 
-1. <b>Fang, Pan<b>, et al. "Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension." Engineering Structures 317 (2024): 118632.
+1. <p><b>Fang, Pan<b>, et al. "Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension." Engineering Structures 317 (2024): 118632.</p>
 <br>
 2. <b>Fang, Pan<b>, et al. "Bending study of submarine power cables based on a repeated unit cell model." Engineering Structures 293 (2023): 116606.
 <br>
