--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -15,14 +15,19 @@ Journal papers:
 
 <p>1. <b>Fang, Pan</b>, et al. "Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension." Engineering Structures 317 (2024): 118632.</p>
 <br>
-2. <b>Fang, Pan<b>, et al. "Bending study of submarine power cables based on a repeated unit cell model." Engineering Structures 293 (2023): 116606.
+
+2. Fang, P., Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023. Bending study of submarine power cables based on a repeated unit cell model. Engineering Structures, 293, p.116606. <a href="https://www.sciencedirect.com/science/article/pii/S0141029623010210">Link</a>
 <br>
-3. <b>Fang, Pan<b>, et al. "Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure." Thin-Walled Structures 181 (2022): 110107.
+
+3. Fang, P., Xu, Y., Gao, Y., Ali, L. and Bai, Y., 2022. Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure. Thin-Walled Structures, 181, p.110107. <a href="https://www.sciencedirect.com/science/article/pii/S0263823122006590">Link</a>
 <br>
-4. <b>Fang, Pan<b>, et al. "Mechanical responses of submarine power cables subject to axisymmetric loadings." Ocean Engineering 239 (2021): 109847.
+
+4. Fang, P., Jiang, X., Hopman, H. and Bai, Y., 2021. Mechanical responses of submarine power cables subject to axisymmetric loadings. Ocean Engineering, 239, p.109847. <a href="https://www.sciencedirect.com/science/article/pii/S0029801821011999">Link</a>
 <br>
-5. <b>Fang, P.<b>, Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27. <a href="https://www.sciencedirect.com/science/article/pii/S0141118718307053">Link</a>
+
+5. Fang, P., Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27. <a href="https://www.sciencedirect.com/science/article/pii/S0141118718307053">Link</a>
 <br>
+
 6. 
 
 
