--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -28,7 +28,7 @@ Journal papers:
 5. Fang, P., Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27. <a href="https://www.sciencedirect.com/science/article/pii/S0141118718307053">Link</a>
 <br>
 
-6. 
+6. Xu, Y., Fang, P. and Bai, Y., 2021. Mechanical behavior of metallic strip flexible pipes during reeling operation. Marine Structures, 77, p.102942. <a href="https://www.sciencedirect.com/science/article/pii/S0951833921000101">Link</a>
 
 
 
