--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -29,9 +29,9 @@ Journal papers:
 
 6. Xu, Y., Fang, P. and Bai, Y., 2021. Mechanical behavior of metallic strip flexible pipes during reeling operation. Marine Structures, 77, p.102942. <a href="https://www.sciencedirect.com/science/article/pii/S0951833921000101">Link</a>
 
+7. Xu, Y., Bai, Y., Fang, P., Yuan, S. and Liu, C., 2019. Structural analysis of fibreglass reinforced bonded flexible pipe subjected to tension. Ships and Offshore Structures, 14(7), pp.777-787. <a href="https://www.tandfonline.com/doi/full/10.1080/17445302.2018.1564534">Link</a>
 
+8. Gao, Y., Bai, Y., Cheng, P., Fang, P. and Xu, Y., 2022. Analysis of the mechanical properties of a fibreglass reinforced flexible pipe (FGRFP). Ships and Offshore Structures, 17(3), pp.589-606. <a href="https://www.tandfonline.com/doi/full/10.1080/17445302.2020.1857568">Link</a>
 
-
-
-
+9. Ma, Y., Shi, B., Ali, L., Bai, Y. and Fang, P., 2024. Mechanical analysis of a type of wire rope subjected to tension. Ships and Offshore Structures, 19(4), pp.541-547. <a href="https://www.tandfonline.com/doi/full/10.1080/17445302.2023.2190445">Link</a>
 
