--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,6 +9,9 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
+
+<!-- 文献全部使用Harvard格式 -->
+
 <br>
 Journal papers:
 <br>
