--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -12,9 +12,9 @@ author_profile: true
 
 <!-- 文献全部使用Harvard格式 -->
 
-<br>
-Journal papers:
-<br>
+
+<p><u>Journal papers:</u></p>
+
 
 1. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024. Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension. Engineering Structures, 317, p.118632. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a>
 <br>
