--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -44,3 +44,26 @@ author_profile: true
 <br>
 
 
+<p><u>Conference papers:</u></p>
+
+1. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024, June. Computational homogenization method for the bending analysis of submarine power cables. In Journal of Physics: Conference Series (Vol. 2647, No. 2, p. 022010). IOP Publishing. <a href="https://iopscience.iop.org/article/10.1088/1742-6596/2647/2/022010/meta">Link</a>
+<br>
+
+2. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023, June. Study of the effects of cross section shape on the structural behaviour of helical wires on a bent flexible structure. In ISOPE International Ocean and Polar Engineering Conference (pp. ISOPE-I). ISOPE. <a href="https://onepetro.org/ISOPEIOPEC/proceedings/ISOPE23/All-ISOPE23/ISOPE-I-23-252/524662">Link</a>
+<br>
+
+3. <b>Fang, P.</b>, Jiang, X., Hopman, H. and Bai, Y., 2021. A review of mechanical analysis of submarine power cables. Maritime Technology and Engineering 5 Volume 2, pp.559-568. <a href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003216599-59/review-mechanical-analysis-submarine-power-cables-pan-fang-xiaoli-jiang-hans-hopman-yong-bai">Link</a>
+<br>
+
+4. <b>Fang, P.</b>, Xu, Y., Yuan, S., Bai, Y. and Cheng, P., 2018, June. Investigation on mechanical properties of fibreglass reinforced flexible pipes under torsion. In International Conference on Offshore Mechanics and Arctic Engineering (Vol. 51272, p. V07BT06A028). American Society of Mechanical Engineers. <a href="https://asmedigitalcollection.asme.org/OMAE/proceedings-abstract/OMAE2018/51272/274167">Link</a>
+
+
+
+
+
+
+
+
+
+
+
