--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -1,1 +1,67 @@
+---
+layout: archive
+title: "Research"
+permalink: /Research/
+author_profile: true
+---
+
+在这里添加自己的所有Research简介
+
+
+<!-- 文献全部使用Harvard格式 -->
+
+
+<p><u>Journal papers:</u></p>
+
+
+1. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024. Development of an effective modeling method for the mechanical analysis of three-core submarine power cables under tension. Engineering Structures, 317, p.118632. <a href="https://www.sciencedirect.com/science/article/pii/S0141029624011945">Link</a>
+<br>
+
+2. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023. Bending study of submarine power cables based on a repeated unit cell model. Engineering Structures, 293, p.116606. <a href="https://www.sciencedirect.com/science/article/pii/S0141029623010210">Link</a>
+<br>
+
+3. <b>Fang, P.</b>, Xu, Y., Gao, Y., Ali, L. and Bai, Y., 2022. Mechanical responses of a fiberglass flexible pipe subject to tension & internal pressure. Thin-Walled Structures, 181, p.110107. <a href="https://www.sciencedirect.com/science/article/pii/S0263823122006590">Link</a>
+<br>
+
+4. <b>Fang, P.</b>, Jiang, X., Hopman, H. and Bai, Y., 2021. Mechanical responses of submarine power cables subject to axisymmetric loadings. Ocean Engineering, 239, p.109847. <a href="https://www.sciencedirect.com/science/article/pii/S0029801821011999">Link</a>
+<br>
+
+5. <b>Fang, P.</b>, Yuan, S., Cheng, P., Bai, Y. and Xu, Y., 2019. Mechanical responses of metallic strip flexible pipes subjected to pure torsion. Applied Ocean Research, 86, pp.13-27. <a href="https://www.sciencedirect.com/science/article/pii/S0141118718307053">Link</a>
+<br>
+
+6. Xu, Y., <b>Fang, P.</b>. and Bai, Y., 2021. Mechanical behavior of metallic strip flexible pipes during reeling operation. Marine Structures, 77, p.102942. <a href="https://www.sciencedirect.com/science/article/pii/S0951833921000101">Link</a>
+<br>
+
+7. Xu, Y., Bai, Y., <b>Fang, P.</b>, Yuan, S. and Liu, C., 2019. Structural analysis of fibreglass reinforced bonded flexible pipe subjected to tension. Ships and Offshore Structures, 14(7), pp.777-787. <a href="https://www.tandfonline.com/doi/full/10.1080/17445302.2018.1564534">Link</a>
+<br>
+
+8. Gao, Y., Bai, Y., Cheng, P., <b>Fang, P.</b>. and Xu, Y., 2022. Analysis of the mechanical properties of a fibreglass reinforced flexible pipe (FGRFP). Ships and Offshore Structures, 17(3), pp.589-606. <a href="https://www.tandfonline.com/doi/full/10.1080/17445302.2020.1857568">Link</a>
+<br>
+
+9. Ma, Y., Shi, B., Ali, L., Bai, Y. and <b>Fang, P.</b>, 2024. Mechanical analysis of a type of wire rope subjected to tension. Ships and Offshore Structures, 19(4), pp.541-547. <a href="https://www.tandfonline.com/doi/full/10.1080/17445302.2023.2190445">Link</a>
+<br>
+
+
+<p><u>Conference papers:</u></p>
+
+1. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2024, June. Computational homogenization method for the bending analysis of submarine power cables. In Journal of Physics: Conference Series (Vol. 2647, No. 2, p. 022010). IOP Publishing. <a href="https://iopscience.iop.org/article/10.1088/1742-6596/2647/2/022010/meta">Link</a>
+<br>
+
+2. <b>Fang, P.</b>, Li, X., Jiang, X., Hopman, H. and Bai, Y., 2023, June. Study of the effects of cross section shape on the structural behaviour of helical wires on a bent flexible structure. In ISOPE International Ocean and Polar Engineering Conference (pp. ISOPE-I). ISOPE. <a href="https://onepetro.org/ISOPEIOPEC/proceedings/ISOPE23/All-ISOPE23/ISOPE-I-23-252/524662">Link</a>
+<br>
+
+3. <b>Fang, P.</b>, Jiang, X., Hopman, H. and Bai, Y., 2021. A review of mechanical analysis of submarine power cables. Maritime Technology and Engineering 5 Volume 2, pp.559-568. <a href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003216599-59/review-mechanical-analysis-submarine-power-cables-pan-fang-xiaoli-jiang-hans-hopman-yong-bai">Link</a>
+<br>
+
+4. <b>Fang, P.</b>, Xu, Y., Yuan, S., Bai, Y. and Cheng, P., 2018, June. Investigation on mechanical properties of fibreglass reinforced flexible pipes under torsion. In International Conference on Offshore Mechanics and Arctic Engineering (Vol. 51272, p. V07BT06A028). American Society of Mechanical Engineers. <a href="https://asmedigitalcollection.asme.org/OMAE/proceedings-abstract/OMAE2018/51272/274167">Link</a>
+
+
+
+
+
+
+
+
+
+
 
