--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -58,7 +58,7 @@ author_profile: true
         <!-- 第一项 -->
         <div class="research-item">
             <a href="link-to-SPC.html">
-                <img src="SPC.jpg" alt="SPC">
+                <img src="images/SPC.png" alt="SPC">
                 Submarine power cables
             </a>
         </div>
