--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -64,7 +64,7 @@ author_profile: true
         <p>Featuring agile operational ability and low financial costs, unmanned surface vehicles are a desirable tool to perform bathymetric mapping for coastal regions. However, the CPP problem for bathymetry remains an ongoing challenge due to its NP-hard feature, conflicting objectives, and complex ocean environments. This research aims to design effective mathematical models and solvers to address these challenges. We use knowledge from remote sensing, optimization, robotics, and marine engineering to develop algorithms for optimal solutions. Numerical simulations and lake trials are performed to validate the effectiveness in practical applications.</p>
 
         <div class="image-grid">
-            <img src="image1.jpg" alt="Generated waypoints and coastal line">
+            <img src="SPC.png" alt="Submarine power cables">
             <img src="image2.jpg" alt="Simulation of bathymetric survey">
             <img src="image3.jpg" alt="USV on the lake">
             <img src="image4.jpg" alt="Bathymetry trials on lake">
