--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -60,8 +60,17 @@ author_profile: true
 
     <div class="container">
         <h2>Research</h2>
-        <h3>Coverage path planning (CPP) for USV-assisted coastal bathymetric survey</h3>
-        <p>Featuring agile operational ability and low financial costs, unmanned surface vehicles are a desirable tool to perform bathymetric mapping for coastal regions. However, the CPP problem for bathymetry remains an ongoing challenge due to its NP-hard feature, conflicting objectives, and complex ocean environments. This research aims to design effective mathematical models and solvers to address these challenges. We use knowledge from remote sensing, optimization, robotics, and marine engineering to develop algorithms for optimal solutions. Numerical simulations and lake trials are performed to validate the effectiveness in practical applications.</p>
+        <h3>Development of an effective modeling method for the local mechanical analysis of submarine power cables</h3>
+        <p>The structural complexity of submarine power cables (SPCs) presents significant challenges in their local
+            mechanical analysis. This paper introduces an advanced modeling method developed for analyzing the
+            mechanical behavior of SPCs under tension, emphasizing both accuracy and efficiency. The method’s accuracy
+            is validated through a comparison of simulation results with tension tests conducted on a three-core SPC
+            sample. Efficiency is demonstrated by the superior calculation speed of our model relative to traditional
+            full-scale models. This improved performance is achieved by adopting periodic boundary conditions derived
+            from the homogenization method applied to slender beam-like structures, and by employing a specialized
+            combination of elements to model the helical metal components within the SPCs. The resulting model provides
+            robust capabilities for the mechanical analysis of SPCs under tension and demonstrates significant possibility
+            in accommodating various other loadings.</p>
 
         <div class="image-grid">
             <img src="SPC.png" alt="Submarine power cables">
