--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -14,7 +14,7 @@ author_profile: true
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Section</title>
+    <title>Research-1 Section</title>
     <style>
         body {
             font-family: Arial, sans-serif;
