--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -62,14 +62,14 @@ author_profile: true
         <h2>Research</h2>
         <h3>Development of an effective modeling method for the local mechanical analysis of submarine power cables</h3>
         <p>The structural complexity of submarine power cables (SPCs) presents significant challenges in their local
-            mechanical analysis. This paper introduces an advanced modeling method developed for analyzing the
-            mechanical behavior of SPCs under tension, emphasizing both accuracy and efficiency. The method’s accuracy
-            is validated through a comparison of simulation results with tension tests conducted on a three-core SPC
+            mechanical analysis. This research introduces an advanced modeling method developed for analyzing the
+            mechanical behavior of SPCs under a range of different loadings, emphasizing both accuracy and efficiency. 
+            The method’s accuracy is validated through a comparison of simulation results with tension tests conducted on a three-core SPC
             sample. Efficiency is demonstrated by the superior calculation speed of our model relative to traditional
             full-scale models. This improved performance is achieved by adopting periodic boundary conditions derived
             from the homogenization method applied to slender beam-like structures, and by employing a specialized
             combination of elements to model the helical metal components within the SPCs. The resulting model provides
-            robust capabilities for the mechanical analysis of SPCs under tension and demonstrates significant possibility
+            robust capabilities for the mechanical analysis of SPCs and demonstrates significant possibility
             in accommodating various other loadings.</p>
 
         <div class="image-grid">
