--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -73,7 +73,7 @@ author_profile: true
             in accommodating various other loadings.</p>
 
         <div class="image-grid">
-            <img src="SPC.png" alt="Submarine power cables">
+            <img src="https://pan-fang.github.io/images/SPC.png" alt="Submarine power cables">
             <img src="https://pan-fang.github.io/_pages/SPC.png" alt="Simulation of bathymetric survey">
             <img src="image3.jpg" alt="USV on the lake">
             <img src="image4.jpg" alt="Bathymetry trials on lake">
