--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -73,10 +73,10 @@ author_profile: true
             in accommodating various other loadings.</p>
 
         <div class="image-grid">
-            <img src="https://pan-fang.github.io/images/SPC.png" alt="Submarine power cables">
-            <img src="https://pan-fang.github.io/_pages/SPC.png" alt="Simulation of bathymetric survey">
-            <img src="image3.jpg" alt="USV on the lake">
-            <img src="image4.jpg" alt="Bathymetry trials on lake">
+            <img src="https://pan-fang.github.io/images/SPC-1.png" alt="Submarine power cables-1">
+            <img src="https://pan-fang.github.io/images/SPC-2.png" alt="Submarine power cables-2">
+            <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3">
+            <img src="https://pan-fang.github.io/images/SPC-4.png" alt="Submarine power cables-4">
         </div>
     </div>
 
