--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -14,7 +14,7 @@ author_profile: true
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research-1 Section</title>
+    <title>Research Section</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,18 +59,18 @@ author_profile: true
 <body>
 
     <div class="container">
-        <h2>Research</h2>
+        <h2>Research-1</h2>
         <h3>Development of an effective modeling method for the local mechanical analysis of submarine power cables</h3>
-        <p>The structural complexity of submarine power cables (SPCs) presents significant challenges in their local
+        <p>The structural complexity of submarine power cables (SPCs) and complex contact issues within present significant challenges in their local
             mechanical analysis. This research introduces an advanced modeling method developed for analyzing the
             mechanical behavior of SPCs under a range of different loadings, emphasizing both accuracy and efficiency. 
-            The method’s accuracy is validated through a comparison of simulation results with tension tests conducted on a three-core SPC
-            sample. Efficiency is demonstrated by the superior calculation speed of our model relative to traditional
+            The method’s accuracy is validated through a comparison of simulation results with tests conducted on three-core SPC and single-core
+            samples. Efficiency is demonstrated by the superior calculation speed of our model relative to traditional
             full-scale models. This improved performance is achieved by adopting periodic boundary conditions derived
             from the homogenization method applied to slender beam-like structures, and by employing a specialized
             combination of elements to model the helical metal components within the SPCs. The resulting model provides
             robust capabilities for the mechanical analysis of SPCs and demonstrates significant possibility
-            in accommodating various other loadings.</p>
+            in accommodating various other loadings. I have made the codes in this research open access. Please find them in Codes page</p>
 
         <div class="image-grid">
             <img src="https://pan-fang.github.io/images/SPC-1.png" alt="Submarine power cables-1">
