--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -69,14 +69,15 @@ author_profile: true
             full-scale models. This improved performance is achieved by adopting periodic boundary conditions derived
             from the homogenization method applied to slender beam-like structures, and by employing a specialized
             combination of elements to model the helical metal components within the SPCs. The resulting model provides
-            robust capabilities for the mechanical analysis of SPCs and demonstrates significant possibility
-            in accommodating various other loadings. I have made the codes in this research open access. Please find them in Codes page</p>
+            robust capabilities for the mechanical analysis of SPCs. I have made the codes in this research open access. Please find them in Codes page</p>
 
         <div class="image-grid">
             <img src="https://pan-fang.github.io/images/SPC-1.png" alt="Submarine power cables-1">
             <img src="https://pan-fang.github.io/images/SPC-2.png" alt="Submarine power cables-2">
             <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3">
             <img src="https://pan-fang.github.io/images/SPC-4.png" alt="Submarine power cables-4">
+            <img src="https://pan-fang.github.io/images/SPC-4.png" alt="Submarine power cables-5">
+            <img src="https://pan-fang.github.io/images/SPC-4.png" alt="Submarine power cables-6">
         </div>
     </div>
 
