--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -45,12 +45,14 @@ author_profile: true
         }
         .image-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(3, 1fr); /* 每行三列 */
             grid-gap: 10px;
             margin-top: 20px;
         }
         .image-grid img {
-            width: 100%;
+            width: 100%; /* 确保图片占满单元格 */
+            height: auto; /* 保持图片的比例 */
+            max-width: 250px; /* 设置图片最大宽度 */
             border-radius: 8px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
