--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -71,7 +71,7 @@ author_profile: true
             full-scale models. This improved performance is achieved by adopting periodic boundary conditions derived
             from the homogenization method applied to slender beam-like structures, and by employing a specialized
             combination of elements to model the helical metal components within the SPCs. The resulting model provides
-            robust capabilities for the mechanical analysis of SPCs. I have made the codes in this research open access. Please find them in Codes page</p>
+            robust capabilities for the mechanical analysis of SPCs. I have made the codes in this research open access. Please find them in Codes page.</p>
 
         <div class="image-grid">
             <img src="https://pan-fang.github.io/images/SPC-1.png" alt="Submarine power cables-1">
