--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -83,6 +83,32 @@ author_profile: true
         </div>
     </div>
 
+        <div class="container">
+        <h2>Research-2</h2>
+        <h3>Development of a numerical model for the fracture analysis of fiberglass reinforced flexible pipes</h3>
+        <p>The structural complexity of submarine power cables (SPCs) and complex contact issues within present significant challenges in their local
+            mechanical analysis. This research introduces an advanced modeling method developed for analyzing the
+            mechanical behavior of SPCs under a range of different loadings, emphasizing both accuracy and efficiency. 
+            The method’s accuracy is validated through a comparison of simulation results with tests conducted on three-core SPC and single-core
+            samples. Efficiency is demonstrated by the superior calculation speed of our model relative to traditional
+            full-scale models. This improved performance is achieved by adopting periodic boundary conditions derived
+            from the homogenization method applied to slender beam-like structures, and by employing a specialized
+            combination of elements to model the helical metal components within the SPCs. The resulting model provides
+            robust capabilities for the mechanical analysis of SPCs. I have made the codes in this research open access. Please find them in Codes page.</p>
+
+        <div class="image-grid">
+            <img src="https://pan-fang.github.io/images/SPC-1.png" alt="Submarine power cables-1">
+            <img src="https://pan-fang.github.io/images/SPC-2.png" alt="Submarine power cables-2">
+            <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3">
+            <img src="https://pan-fang.github.io/images/SPC-4.png" alt="Submarine power cables-4">
+            <img src="https://pan-fang.github.io/images/SPC-5.png" alt="Submarine power cables-5">
+            <img src="https://pan-fang.github.io/images/SPC-6.png" alt="Submarine power cables-6">
+        </div>
+    </div>
+
+
+
+    
 </body>
 </html>
 
