--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -86,15 +86,14 @@ author_profile: true
         <div class="container">
         <h2>Research-2</h2>
         <h3>Development of a numerical model for the fracture analysis of fiberglass reinforced flexible pipes</h3>
-        <p>The structural complexity of submarine power cables (SPCs) and complex contact issues within present significant challenges in their local
-            mechanical analysis. This research introduces an advanced modeling method developed for analyzing the
-            mechanical behavior of SPCs under a range of different loadings, emphasizing both accuracy and efficiency. 
-            The method’s accuracy is validated through a comparison of simulation results with tests conducted on three-core SPC and single-core
-            samples. Efficiency is demonstrated by the superior calculation speed of our model relative to traditional
-            full-scale models. This improved performance is achieved by adopting periodic boundary conditions derived
-            from the homogenization method applied to slender beam-like structures, and by employing a specialized
-            combination of elements to model the helical metal components within the SPCs. The resulting model provides
-            robust capabilities for the mechanical analysis of SPCs. I have made the codes in this research open access. Please find them in Codes page.</p>
+        <p>Composite structures, such as the fiberglass reinforced structure studied in this project, have been normally
+        treated in previous research as homogeneous anisotropic laminated plates regarding the investigation of their
+        mechanical properties. Throughout this research, this specific structure is considered in a different way in which
+        the fiberglass and polyethylene matrix are treated separately. By using the proposed method, the material
+        plasticity of polyethylene and the fracture stress of the fiberglass can be taken into account, and thus the
+        fracture of the fiberglass inside the fiberglass reinforced flexible pipes(FGRFP) can be predicted. The mechanical
+        behavior of FGRFP under two real-life main loadings(tension and internal pressure) is investigated by using
+        analytical and numerical methods based on the proposed technique. Experiments are used to verify the results.</p>
 
         <div class="image-grid">
             <img src="https://pan-fang.github.io/images/SPC-1.png" alt="Submarine power cables-1">
