--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -96,12 +96,12 @@ author_profile: true
         analytical and numerical methods based on the proposed technique. Experiments are used to verify the results.</p>
 
         <div class="image-grid">
-            <img src="https://pan-fang.github.io/images/SPC-1.png" alt="Submarine power cables-1">
-            <img src="https://pan-fang.github.io/images/SPC-2.png" alt="Submarine power cables-2">
-            <img src="https://pan-fang.github.io/images/SPC-3.png" alt="Submarine power cables-3">
-            <img src="https://pan-fang.github.io/images/SPC-4.png" alt="Submarine power cables-4">
-            <img src="https://pan-fang.github.io/images/SPC-5.png" alt="Submarine power cables-5">
-            <img src="https://pan-fang.github.io/images/SPC-6.png" alt="Submarine power cables-6">
+            <img src="https://pan-fang.github.io/images/FGRFP-1.png" alt="FGRFP-1">
+            <img src="https://pan-fang.github.io/images/FGRFP-2.png" alt="FGRFP-2">
+            <img src="https://pan-fang.github.io/images/FGRFP-3.png" alt="FGRFP-3">
+            <img src="https://pan-fang.github.io/images/FGRFP-4.png" alt="FGRFP-4">
+            <img src="https://pan-fang.github.io/images/FGRFP-5.png" alt="FGRFP-5">
+            <img src="https://pan-fang.github.io/images/FGRFP-6.png" alt="FGRFP-6">
         </div>
     </div>
 
