--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -85,7 +85,7 @@ author_profile: true
 
         <div class="container">
         <h2>Research-2</h2>
-        <h3>Development of a numerical model for the fracture analysis of fiberglass reinforced flexible pipes</h3>
+        <h3>Development of an analytical and a numerical model for the fracture analysis of fiberglass reinforced flexible pipes</h3>
         <p>Composite structures, such as the fiberglass reinforced structure studied in this project, have been normally
         treated in previous research as homogeneous anisotropic laminated plates regarding the investigation of their
         mechanical properties. Throughout this research, this specific structure is considered in a different way in which
