--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -83,7 +83,10 @@ author_profile: true
         </div>
     </div>
 
-        <div class="container">
+
+
+    
+    <div class="container">
         <h2>Research-2</h2>
         <h3>Development of an analytical and a numerical model for the fracture analysis of fiberglass reinforced flexible pipes</h3>
         <p>Composite structures, such as the fiberglass reinforced structure studied in this project, have been normally
@@ -106,6 +109,24 @@ author_profile: true
     </div>
 
 
+
+
+
+
+    <div class="container">
+        <h2>Research-3</h2>
+        <h3>Steel strip flexible pipes; Reeling operation analysis; Fracture of steel ropes; Hydrogen bottle burst</h3>
+        <p>My research also involves other structures, including steel strip reinforced flexible pipes, steel ropes and hydrogen bottles. The following are some images from the relevant research</p>
+
+        <div class="image-grid">
+            <img src="https://pan-fang.github.io/images/FGRFP-1.png" alt="FGRFP-1">
+            <img src="https://pan-fang.github.io/images/FGRFP-2.png" alt="FGRFP-2">
+            <img src="https://pan-fang.github.io/images/FGRFP-3.png" alt="FGRFP-3">
+            <img src="https://pan-fang.github.io/images/FGRFP-4.png" alt="FGRFP-4">
+            <img src="https://pan-fang.github.io/images/FGRFP-5.png" alt="FGRFP-5">
+            <img src="https://pan-fang.github.io/images/FGRFP-6.png" alt="FGRFP-6">
+        </div>
+    </div>
 
     
 </body>
