--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -119,12 +119,12 @@ author_profile: true
         <p>My research also involves other structures, including steel strip reinforced flexible pipes, steel ropes and hydrogen bottles. The following are some images from the relevant research</p>
 
         <div class="image-grid">
-            <img src="https://pan-fang.github.io/images/FGRFP-1.png" alt="FGRFP-1">
-            <img src="https://pan-fang.github.io/images/FGRFP-2.png" alt="FGRFP-2">
-            <img src="https://pan-fang.github.io/images/FGRFP-3.png" alt="FGRFP-3">
-            <img src="https://pan-fang.github.io/images/FGRFP-4.png" alt="FGRFP-4">
-            <img src="https://pan-fang.github.io/images/FGRFP-5.png" alt="FGRFP-5">
-            <img src="https://pan-fang.github.io/images/FGRFP-6.png" alt="FGRFP-6">
+            <img src="https://pan-fang.github.io/images/Other_research-1.png" alt="Other_research-1">
+            <img src="https://pan-fang.github.io/images/Other_research-2.png" alt="Other_research-2">
+            <img src="https://pan-fang.github.io/images/Other_research-3.png" alt="Other_research-3">
+            <img src="https://pan-fang.github.io/images/Other_research-4.png" alt="Other_research-4">
+            <img src="https://pan-fang.github.io/images/Other_research-5.png" alt="Other_research-5">
+            <img src="https://pan-fang.github.io/images/Other_research-6.png" alt="Other_research-6">
         </div>
     </div>
 
