--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -115,7 +115,7 @@ author_profile: true
 
     <div class="container">
         <h2>Research-3</h2>
-        <h3>Steel strip flexible pipes; Reeling operation analysis; Fracture of steel ropes; Hydrogen bottle burst</h3>
+        <h3>Steel strip reinforced flexible pipes; Reeling operation analysis; Fracture of steel ropes; Hydrogen bottle burst</h3>
         <p>My research also involves other structures, including steel strip reinforced flexible pipes, steel ropes and hydrogen bottles. The following are some images from the relevant research</p>
 
         <div class="image-grid">
