--- a/_pages/Research.html
+++ b/_pages/Research.html
@@ -95,7 +95,7 @@ author_profile: true
         the fiberglass and polyethylene matrix are treated separately. By using the proposed method, the material
         plasticity of polyethylene and the fracture stress of the fiberglass can be taken into account, and thus the
         fracture of the fiberglass inside the fiberglass reinforced flexible pipes(FGRFP) can be predicted. The mechanical
-        behavior of FGRFP under two real-life main loadings(tension and internal pressure) is investigated by using
+        behavior of FGRFP under two main real-life loadings(tension and internal pressure) is investigated by using
         analytical and numerical methods based on the proposed technique. Experiments are used to verify the results.</p>
 
         <div class="image-grid">
